  you never saw that person walk.)
- Make "Destination reached." command a non-debug message when you arrive
  at a manually input destination.
- Implemented "That person is too far from you to trade." error message.
- _whenWeaponEquipped _whenShieldEquipped conditions.
- Implement packet 014C (guild ally/enemy list).
- Detect $player->{guildID} and $char->{guildID}.

New commands:
- storage log
  Manually force writing to storage.txt. Some people complain that
  the storage log is broken, so until that has been resolved, this
  command will do.
- ai on
  ai off
  Turns AI on/off.
- card list
  List cards in your inventory.
- card use <card inventory number>
  Get the list of items you can slot the card into.
- card mergelist
  Show the list of items you can slot the card into again.
- card mergecancel
  Cancel the card merging request.
- card merge <merge list number>
  Merge the card into the item.

New config options:
- partySkill: target_dead
  Only use the skill on a dead player. Useful for Resurrection.
- avoidGM_namePattern (regular expression)
  In case your server uses non-standard GM names, you can specify a
  regular expression for GM names with this option.
- teleportAuto_totalDmg (number)
  teleportAuto_totalDmgInLock (number)
  Teleport away if a monster has done this much total damage to you.
- dcOnZeny (number)
  Disconnect automatically when your Zeny equals or lower than the
  specified number. Useful if you use buyAuto or the auto buy plugin.
- teleportAuto_atkCount (number)
  Teleport away if Kore can't kill the monster in the specified number
  of attacks.
- "e" sequence for NPC talk steps; use it when you want kore to wait
  until the NPC says "Done talking"
- route_teleport_notInMaps (list of maps)
  Do not teleport on route in the specified maps.

New control files:
- control/sys.txt
  This file stores options that can only be loaded once (so this file
  cannot be reloaded). You can get a default version of this file